small cleanup in the weather forecast notebook

--- a/german-weather-forecast/german-weather-forecast.ipynb
+++ b/german-weather-forecast/german-weather-forecast.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook was adopted from https://github.com/Hvass-Labs/TensorFlow-Tutorials/blob/master/23_Time-Series-Prediction.ipynb"
+    "This notebook was adopted from [Hvass-Labs][1]'s tensorflow tutorial.\n",
+    "\n",
+    "[1]: https://github.com/Hvass-Labs/TensorFlow-Tutorials/blob/master/23_Time-Series-Prediction.ipynb"
    ]
   },
   {
@@ -20,14 +22,18 @@
    "source": [
     "In this notebook, we will try to predict weather for near future. For testing, I am going to use weather data collected for the city Wiesbaden, as I live here now.\n",
     "\n",
-    "The data is collected from Climate Data Center (CDC) of Deutscher Wetterdienst.\n",
-    "https://cdc.dwd.de/portal/201804271017/index.html\n",
+    "The data is collected from [Climate Data Center (CDC)][2] of Deutscher Wetterdienst.\n",
     "\n",
-    "The FTP server where the data can be downloaded from:\n",
-    "ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/historical/\n",
+    "[2]: https://cdc.dwd.de/portal/201804271017/index.html\n",
     "\n",
-    "Dataset description:\n",
-    "ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/historical/DESCRIPTION_obsgermany_climate_hourly_tu_historical_en.pdf"
+    "Data can be downloaded from this [ftp server][3].\n",
+    "\n",
+    "[3]: ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/historical/\n",
+    "\n",
+    "\n",
+    "Check out this [PDF][4] for dataset description.\n",
+    "\n",
+    "[4]: ftp://ftp-cdc.dwd.de/pub/CDC/observations_germany/climate/hourly/air_temperature/historical/DESCRIPTION_obsgermany_climate_hourly_tu_historical_en.pdf"
    ]
   },
   {
